@@ -5,6 +5,7 @@ cupt (1.3.0) UNRELEASED; urgency=low
   * Cupt:
     - Cache:
       - 'get_satisfying_versions': don't sort result.
+      - 'get_sorted_pinned_versions': removed ability to memoize it.
       - BinaryVersion:
         - Rewritten parsing the version entry using different approach.
           Speeded up parsing significantly.
